# log

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: linux.yaml  osx.yaml
include/ks/: log.hpp
include/ks/log/detail/: CMakeLists.txt
src/: CMakeLists.txt  log.cpp
tests/: CMakeLists.txt  test_log.cpp
